# WebVideos

./: .gitignore  main.py  pyproject.toml
static/: package-lock.json  package.json
static/src/: App.vue
static/src/components/: Video.vue
