[tool.poetry]
name = "webvideos"
version = "0.1.0"
description = ""
authors = ["Tipuch"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
aiofiles = "^0.6.0"
Jinja2 = "^2.11.3"
b2sdk = "^1.5.0"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
